-- Sentinel PostgreSQL schema
-- Run this in pgAdmin against the target Sentinel database.
-- This script mirrors dev/Data Model/sentinel_data_model.dbml.

BEGIN;

CREATE TABLE IF NOT EXISTS users (
  user_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  first_name varchar(100) NOT NULL,
  last_name varchar(100) NOT NULL,
  phone_number varchar(20),
  email varchar(255) NOT NULL UNIQUE,
  password_hash varchar(255) NOT NULL,
  created_on timestamp NOT NULL DEFAULT now(),
  last_updated timestamp NOT NULL DEFAULT now()
);

CREATE TABLE IF NOT EXISTS user_sessions (
  session_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  user_id integer NOT NULL,
  session_token_hash varchar(64) NOT NULL UNIQUE,
  is_active boolean NOT NULL DEFAULT true,
  expires_on timestamp NOT NULL,
  created_on timestamp NOT NULL DEFAULT now(),
  last_used_on timestamp,
  CONSTRAINT fk_user_sessions_user
    FOREIGN KEY (user_id) REFERENCES users (user_id) ON DELETE CASCADE
);

CREATE INDEX IF NOT EXISTS ix_user_sessions_user_id
ON user_sessions (user_id);

CREATE INDEX IF NOT EXISTS ix_user_sessions_expires_on
ON user_sessions (expires_on);

CREATE TABLE IF NOT EXISTS pending_signups (
  pending_signup_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  first_name varchar(100) NOT NULL,
  last_name varchar(100) NOT NULL,
  email varchar(255) NOT NULL UNIQUE,
  password_hash varchar(255) NOT NULL,
  verification_code_hash varchar(255) NOT NULL,
  expires_on timestamp NOT NULL,
  created_on timestamp NOT NULL DEFAULT now()
);

CREATE INDEX IF NOT EXISTS ix_pending_signups_expires_on
ON pending_signups (expires_on);

CREATE TABLE IF NOT EXISTS model_providers (
  provider_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  provider_name text NOT NULL UNIQUE,
  pricing_url varchar(1000),
  is_active boolean NOT NULL DEFAULT true,
  created_on timestamp NOT NULL DEFAULT now(),
  last_updated timestamp NOT NULL DEFAULT now()
);

CREATE TABLE IF NOT EXISTS models (
  model_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  provider_id integer NOT NULL,
  model_name text NOT NULL,
  is_active boolean NOT NULL DEFAULT true,
  created_on timestamp NOT NULL DEFAULT now(),
  last_updated timestamp NOT NULL DEFAULT now(),
  CONSTRAINT uq_models_provider_name UNIQUE (provider_id, model_name),
  CONSTRAINT fk_models_provider
    FOREIGN KEY (provider_id) REFERENCES model_providers (provider_id)
);

CREATE TABLE IF NOT EXISTS model_config (
  config_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  user_id integer NOT NULL,
  model_id integer NOT NULL,
  encrypted_api_key text NOT NULL,
  api_key_last4 varchar(4),
  is_active boolean NOT NULL DEFAULT true,
  created_on timestamp NOT NULL DEFAULT now(),
  last_updated timestamp NOT NULL DEFAULT now(),
  CONSTRAINT uq_model_config_user_model UNIQUE (user_id, model_id),
  CONSTRAINT fk_model_config_user
    FOREIGN KEY (user_id) REFERENCES users (user_id) ON DELETE CASCADE,
  CONSTRAINT fk_model_config_model
    FOREIGN KEY (model_id) REFERENCES models (model_id)
);

CREATE UNIQUE INDEX IF NOT EXISTS uq_model_config_one_active_per_user
ON model_config (user_id)
WHERE is_active = true;

CREATE TABLE IF NOT EXISTS content_sources (
  source_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  source_name varchar(100) NOT NULL UNIQUE,
  base_url varchar(255) NOT NULL,
  is_active boolean NOT NULL DEFAULT true,
  created_on timestamp NOT NULL DEFAULT now(),
  last_updated timestamp NOT NULL DEFAULT now()
);

CREATE TABLE IF NOT EXISTS source_preferences (
  preference_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  user_id integer NOT NULL,
  source_id integer NOT NULL,
  is_enabled boolean NOT NULL DEFAULT true,
  trust_score integer NOT NULL DEFAULT 3,
  created_on timestamp NOT NULL DEFAULT now(),
  last_updated timestamp NOT NULL DEFAULT now(),
  CONSTRAINT uq_source_preferences_user_source UNIQUE (user_id, source_id),
  CONSTRAINT ck_source_preferences_trust_score CHECK (trust_score BETWEEN 1 AND 5),
  CONSTRAINT fk_source_preferences_user
    FOREIGN KEY (user_id) REFERENCES users (user_id) ON DELETE CASCADE,
  CONSTRAINT fk_source_preferences_source
    FOREIGN KEY (source_id) REFERENCES content_sources (source_id) ON DELETE CASCADE
);

CREATE TABLE IF NOT EXISTS user_content_preferences (
  preference_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  user_id integer NOT NULL UNIQUE,
  include_filings boolean NOT NULL DEFAULT true,
  include_earnings_calls boolean NOT NULL DEFAULT true,
  created_on timestamp NOT NULL DEFAULT now(),
  last_updated timestamp NOT NULL DEFAULT now(),
  CONSTRAINT fk_user_content_preferences_user
    FOREIGN KEY (user_id) REFERENCES users (user_id) ON DELETE CASCADE
);

CREATE TABLE IF NOT EXISTS assets (
  asset_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  symbol varchar(20) NOT NULL,
  company_name varchar(100) NOT NULL,
  legal_entity_name varchar(100),
  exchange varchar(50),
  asset_type varchar(50),
  sector varchar(100),
  industry varchar(100),
  currency varchar(10) NOT NULL,
  is_active boolean NOT NULL DEFAULT true,
  created_on timestamp NOT NULL DEFAULT now(),
  last_updated timestamp NOT NULL DEFAULT now(),
  CONSTRAINT uq_assets_symbol_exchange UNIQUE (symbol, exchange)
);

CREATE TABLE IF NOT EXISTS watchlist (
  id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  user_id integer NOT NULL,
  asset_id integer NOT NULL,
  created_on timestamp NOT NULL DEFAULT now(),
  CONSTRAINT uq_watchlist_user_asset UNIQUE (user_id, asset_id),
  CONSTRAINT fk_watchlist_user
    FOREIGN KEY (user_id) REFERENCES users (user_id) ON DELETE CASCADE,
  CONSTRAINT fk_watchlist_asset
    FOREIGN KEY (asset_id) REFERENCES assets (asset_id) ON DELETE CASCADE
);

CREATE TABLE IF NOT EXISTS articles (
  article_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  source_id integer NOT NULL,
  title varchar(255) NOT NULL,
  published_at timestamp NOT NULL,
  link varchar(1000) NOT NULL UNIQUE,
  excerpt text,
  content_text text,
  fetched_on timestamp,
  expires_on timestamp,
  created_on timestamp NOT NULL DEFAULT now(),
  CONSTRAINT fk_articles_source
    FOREIGN KEY (source_id) REFERENCES content_sources (source_id)
);

CREATE TABLE IF NOT EXISTS article_assets (
  id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  article_id integer NOT NULL,
  asset_id integer NOT NULL,
  created_on timestamp NOT NULL DEFAULT now(),
  CONSTRAINT uq_article_assets_article_asset UNIQUE (article_id, asset_id),
  CONSTRAINT fk_article_assets_article
    FOREIGN KEY (article_id) REFERENCES articles (article_id) ON DELETE CASCADE,
  CONSTRAINT fk_article_assets_asset
    FOREIGN KEY (asset_id) REFERENCES assets (asset_id) ON DELETE CASCADE
);

CREATE TABLE IF NOT EXISTS filings (
  filing_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  asset_id integer NOT NULL,
  filing_type varchar(50),
  link varchar(1000) NOT NULL UNIQUE,
  filed_on timestamp,
  created_on timestamp NOT NULL DEFAULT now(),
  CONSTRAINT fk_filings_asset
    FOREIGN KEY (asset_id) REFERENCES assets (asset_id) ON DELETE CASCADE
);

CREATE TABLE IF NOT EXISTS earnings_call (
  call_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  asset_id integer NOT NULL,
  quarter integer,
  fiscal_year integer,
  transcript_link varchar(1000),
  call_date timestamp,
  created_on timestamp NOT NULL DEFAULT now(),
  CONSTRAINT uq_earnings_call_asset_quarter_year UNIQUE (asset_id, quarter, fiscal_year),
  CONSTRAINT fk_earnings_call_asset
    FOREIGN KEY (asset_id) REFERENCES assets (asset_id) ON DELETE CASCADE
);

CREATE TABLE IF NOT EXISTS reports (
  report_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  user_id integer NOT NULL,
  asset_id integer NOT NULL,
  report_date date NOT NULL,
  lookback_start date NOT NULL,
  lookback_end date NOT NULL,
  summary_text text NOT NULL,
  model_id integer NOT NULL,
  status varchar(50) NOT NULL DEFAULT 'active',
  expires_on timestamp,
  created_on timestamp NOT NULL DEFAULT now(),
  CONSTRAINT uq_reports_user_asset_date UNIQUE (user_id, asset_id, report_date),
  CONSTRAINT ck_reports_status CHECK (status IN ('active', 'pending_delivery', 'delivered', 'expired', 'failed')),
  CONSTRAINT fk_reports_user
    FOREIGN KEY (user_id) REFERENCES users (user_id) ON DELETE CASCADE,
  CONSTRAINT fk_reports_asset
    FOREIGN KEY (asset_id) REFERENCES assets (asset_id),
  CONSTRAINT fk_reports_model
    FOREIGN KEY (model_id) REFERENCES models (model_id)
);

CREATE TABLE IF NOT EXISTS report_sources (
  id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  report_id integer NOT NULL,
  source_type varchar(50) NOT NULL,
  source_id integer NOT NULL,
  created_on timestamp NOT NULL DEFAULT now(),
  CONSTRAINT uq_report_sources_report_type_source UNIQUE (report_id, source_type, source_id),
  CONSTRAINT ck_report_sources_source_type CHECK (source_type IN ('article', 'filing', 'earnings_call')),
  CONSTRAINT fk_report_sources_report
    FOREIGN KEY (report_id) REFERENCES reports (report_id) ON DELETE CASCADE
);

COMMENT ON COLUMN report_sources.source_id IS
  'Polymorphic reference. Uses articles.article_id, filings.filing_id, or earnings_call.call_id based on source_type.';

CREATE TABLE IF NOT EXISTS report_source_preferences (
  id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  report_id integer NOT NULL,
  source_id integer NOT NULL,
  trust_score integer NOT NULL,
  captured_on timestamp NOT NULL DEFAULT now(),
  CONSTRAINT uq_report_source_preferences_report_source UNIQUE (report_id, source_id),
  CONSTRAINT ck_report_source_preferences_trust_score CHECK (trust_score BETWEEN 1 AND 5),
  CONSTRAINT fk_report_source_preferences_report
    FOREIGN KEY (report_id) REFERENCES reports (report_id) ON DELETE CASCADE,
  CONSTRAINT fk_report_source_preferences_source
    FOREIGN KEY (source_id) REFERENCES content_sources (source_id)
);

CREATE TABLE IF NOT EXISTS report_content_preferences (
  id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  report_id integer NOT NULL UNIQUE,
  include_filings boolean NOT NULL,
  include_earnings_calls boolean NOT NULL,
  captured_on timestamp NOT NULL DEFAULT now(),
  CONSTRAINT fk_report_content_preferences_report
    FOREIGN KEY (report_id) REFERENCES reports (report_id) ON DELETE CASCADE
);

CREATE TABLE IF NOT EXISTS report_messages (
  message_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  report_id integer NOT NULL,
  user_id integer NOT NULL,
  role varchar(50) NOT NULL,
  message_text text NOT NULL,
  created_on timestamp NOT NULL DEFAULT now(),
  CONSTRAINT ck_report_messages_role CHECK (role IN ('user', 'assistant', 'system')),
  CONSTRAINT fk_report_messages_report
    FOREIGN KEY (report_id) REFERENCES reports (report_id) ON DELETE CASCADE,
  CONSTRAINT fk_report_messages_user
    FOREIGN KEY (user_id) REFERENCES users (user_id) ON DELETE CASCADE
);

CREATE TABLE IF NOT EXISTS report_message_sources (
  id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  message_id integer NOT NULL,
  source_type varchar(50) NOT NULL,
  source_id integer NOT NULL,
  created_on timestamp NOT NULL DEFAULT now(),
  CONSTRAINT uq_report_message_sources_message_type_source UNIQUE (message_id, source_type, source_id),
  CONSTRAINT ck_report_message_sources_source_type CHECK (source_type IN ('article', 'filing', 'earnings_call')),
  CONSTRAINT fk_report_message_sources_message
    FOREIGN KEY (message_id) REFERENCES report_messages (message_id) ON DELETE CASCADE
);

COMMENT ON COLUMN report_message_sources.source_id IS
  'Polymorphic reference. Uses articles.article_id, filings.filing_id, or earnings_call.call_id based on source_type.';

CREATE TABLE IF NOT EXISTS report_deliveries (
  delivery_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  user_id integer NOT NULL,
  delivery_date date NOT NULL,
  sent_to_email varchar(255) NOT NULL,
  sent_at timestamp,
  delivery_status varchar(50) NOT NULL,
  error_message text,
  created_on timestamp NOT NULL DEFAULT now(),
  CONSTRAINT uq_report_deliveries_user_date UNIQUE (user_id, delivery_date),
  CONSTRAINT ck_report_deliveries_status CHECK (delivery_status IN ('pending', 'sent', 'failed')),
  CONSTRAINT fk_report_deliveries_user
    FOREIGN KEY (user_id) REFERENCES users (user_id) ON DELETE CASCADE
);

CREATE TABLE IF NOT EXISTS report_delivery_items (
  id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  delivery_id integer NOT NULL,
  report_id integer NOT NULL,
  created_on timestamp NOT NULL DEFAULT now(),
  CONSTRAINT uq_report_delivery_items_delivery_report UNIQUE (delivery_id, report_id),
  CONSTRAINT fk_report_delivery_items_delivery
    FOREIGN KEY (delivery_id) REFERENCES report_deliveries (delivery_id) ON DELETE CASCADE,
  CONSTRAINT fk_report_delivery_items_report
    FOREIGN KEY (report_id) REFERENCES reports (report_id) ON DELETE CASCADE
);

CREATE TABLE IF NOT EXISTS price_performance_metrics (
  id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  asset_id integer NOT NULL,
  current_price numeric(18,4),
  d1_return numeric(10,6),
  w1_return numeric(10,6),
  m1_return numeric(10,6),
  ytd_return numeric(10,6),
  y1_return numeric(10,6),
  all_time_high_distance numeric(10,6),
  snapdate date NOT NULL,
  as_of timestamp DEFAULT now(),
  CONSTRAINT uq_price_performance_metrics_asset_snapdate UNIQUE (asset_id, snapdate),
  CONSTRAINT fk_price_performance_metrics_asset
    FOREIGN KEY (asset_id) REFERENCES assets (asset_id) ON DELETE CASCADE
);

CREATE TABLE IF NOT EXISTS risk_metrics (
  id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  asset_id integer NOT NULL,
  volatility numeric(10,6),
  beta numeric(10,6),
  maximum_drawdown numeric(10,6),
  sharpe_ratio numeric(10,6),
  snapdate date NOT NULL,
  as_of timestamp DEFAULT now(),
  CONSTRAINT uq_risk_metrics_asset_snapdate UNIQUE (asset_id, snapdate),
  CONSTRAINT fk_risk_metrics_asset
    FOREIGN KEY (asset_id) REFERENCES assets (asset_id) ON DELETE CASCADE
);

CREATE TABLE IF NOT EXISTS valuation_metrics (
  id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  asset_id integer NOT NULL,
  market_cap numeric(24,2),
  price_to_earnings numeric(14,6),
  forward_price_to_earnings numeric(14,6),
  price_to_sales numeric(14,6),
  price_to_book numeric(14,6),
  snapdate date NOT NULL,
  as_of timestamp DEFAULT now(),
  CONSTRAINT uq_valuation_metrics_asset_snapdate UNIQUE (asset_id, snapdate),
  CONSTRAINT fk_valuation_metrics_asset
    FOREIGN KEY (asset_id) REFERENCES assets (asset_id) ON DELETE CASCADE
);

CREATE TABLE IF NOT EXISTS asset_health (
  id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  asset_id integer NOT NULL,
  revenue numeric(24,2),
  revenue_growth numeric(10,6),
  earnings_per_share numeric(18,4),
  gross_margin numeric(10,6),
  operating_margin numeric(10,6),
  net_margin numeric(10,6),
  free_cash_flow numeric(24,2),
  debt_to_equity numeric(14,6),
  snapdate date NOT NULL,
  as_of timestamp DEFAULT now(),
  CONSTRAINT uq_asset_health_asset_snapdate UNIQUE (asset_id, snapdate),
  CONSTRAINT fk_asset_health_asset
    FOREIGN KEY (asset_id) REFERENCES assets (asset_id) ON DELETE CASCADE
);

CREATE TABLE IF NOT EXISTS alternative_metrics (
  id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  asset_id integer NOT NULL,
  avg_narrative_sentiment numeric(10,6),
  agg_level text,
  binary_sentiment_flag integer,
  analyst_sentiment_flag integer,
  snapdate date NOT NULL,
  as_of timestamp DEFAULT now(),
  CONSTRAINT uq_alternative_metrics_asset_snapdate UNIQUE (asset_id, snapdate),
  CONSTRAINT fk_alternative_metrics_asset
    FOREIGN KEY (asset_id) REFERENCES assets (asset_id) ON DELETE CASCADE
);

CREATE TABLE IF NOT EXISTS asset_events (
  event_id integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  asset_id integer NOT NULL,
  event_type varchar(50) NOT NULL,
  title varchar(255) NOT NULL,
  event_date date NOT NULL,
  status varchar(50) NOT NULL DEFAULT 'upcoming',
  created_on timestamp NOT NULL DEFAULT now(),
  last_updated timestamp NOT NULL DEFAULT now(),
  CONSTRAINT fk_asset_events_asset
    FOREIGN KEY (asset_id) REFERENCES assets (asset_id) ON DELETE CASCADE
);

CREATE INDEX IF NOT EXISTS ix_asset_events_asset_date
  ON asset_events (asset_id, event_date);

CREATE INDEX IF NOT EXISTS ix_asset_events_type_date
  ON asset_events (event_type, event_date);

COMMIT;
